# GroupRoboticsProject

./: README.md
Arduino/mainArduinoCode/: gripper.cpp  gripper.h  irFuncs.cpp  irFuncs.h  laserSensor.cpp  laserSensor.h  mainArduinoCode.ino
Arduino/mainArduinoCodeOLDwithLidar/: gripper.cpp  gripper.h  lidar.cpp  lidar.h  mainArduinoCodeOLDwithLidar.ino
Arduino/oldTestCode/AX12onPCBTest/: AX12ArmServoInstructions.txt  AX12onPCBTest.ino
Arduino/oldTestCode/SPITest/: makingSPIWork.txt  makingSPIWork.txt~  rpiSPIExampleCode.c~
Arduino/oldTestCode/lidarServoTest/: setupInstructionsForAX12ALIDAR.txt  setupInstructionsForAX12ALIDAR.txt~
Arduino/oldTestCode/lidarServoTest/lidarServoTest/: lidarServoTest.ino.ino
Arduino/oldTestCode/pwmTest/: pwmTest.ino
Arduino/oldTestCode/sharpIRTest/: sharpIRTest.ino
Arduino/oldTestCode/sharpIRTest/IRTestOnPCB/: IRTestOnPCB.ino
Arduino/oldTestCode/sharpIRTest/sharpIRTestMultiplexer/: sharpIRTestMultiplexer.ino
ROS/blobDetection/: CMakeLists.txt  package.xml
ROS/blobDetection/src/: blobDetect.cpp  blobdetect.py  oldBlobDetectWithHSVTuningSliders.cpp
ROS/lidar/: poseToTF.py
ROS/lineUpTeddyPackage/src/: lineUpTeddy.py  teddyGripController.cpp
ROS/pickUpTeddy/: CMakeLists.txt  package.xml
ROS/pickUpTeddy/src/: teddyGripController.cpp
groundRobotPackages/: groundLaunch.launch  setupGroundRobot
groundRobotPackages/ArduinoSPIComms/: CMakeLists.txt  package.xml
groundRobotPackages/ArduinoSPIComms/src/: arduinoSPIComms.cpp  spiComms.cpp  spiComms.h
groundRobotPackages/ArduinoSPIComms/src/OLDCodeWithLidar/: arduinoSPICommsOLDwithLidar.cpp  spiCommsOLDwithLidar.cpp  spiCommsOLDwithLidar.h
groundRobotPackages/IMUPublisher/: CMakeLists.txt  package.xml
groundRobotPackages/IMUPublisher/src/: imuPublisher.cpp
groundRobotPackages/MovementSubscriber/: CMakeLists.txt  package.xml
groundRobotPackages/MovementSubscriber/src/: groundRobotMotorControl.cpp  groundRobotMotorControl.h  movementSubscriber.cpp
oldROSTestCode/testPackage/: CMakeLists.txt  package.xml
oldROSTestCode/testPackage/src/: testPublisher.cpp
openCVROSTests/lineUpTeddyPackage/: CMakeLists.txt  package.xml
openCVROSTests/lineUpTeddyPackage/src/: teddyGripController.cpp
